# GQ-LDAP-client

./: AUTHORS  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README-first  README.langpack  TODO  acinclude.m4  aclocal.m4  config.h  config.h.in  config.status  configure  configure.in  gq.spec  gq.spec.in
data/: Makefile  Makefile.am  Makefile.in  gq-ldif.xml  gq-ldif.xml.in  gq.desktop  gq.desktop.in  gq.glade
icons/: Makefile  Makefile.am  Makefile.in  hide.xpm  new.xpm
macros/: herzi-gettext.m4  herzi-prefix.m4  objc.m4
patches/: DN-Umlauts-BUG-134.patch  crypto-Dez-2015.patch  gq-123.patch  multiwraper-BUG-130.patch  patch-src_gq-hash-openssl.c  patch-src_gq-hash-openssl.c-README  support-language-BUG-127.patch
patches/gq/: gq-desktop.patch  gq-iconv-in-libc.patch  gq.spec
pixmaps/: Makefile  Makefile.am  Makefile.in  bomb.xpm  warning.xpm
po/: ChangeLog  LINGUAS  Makefile  Makefile.in  POTFILES  POTFILES.in
src/: COPYING.c  COPYING.h  Makefile  Makefile.am  Makefile.in  browse-dnd.c  browse-dnd.h  browse-export.c  browse-export.h  common.h  configfile.c  configfile.h  debug.c  debug.h  dt_binary.c  dt_binary.h  dt_cert.c  dt_cert.h  dt_clist.c  dt_clist.h  dt_crl.c  dt_crl.h  dt_date.c  dt_date.h  dt_entry.c  dt_entry.h  dt_generic_binary.c  dt_generic_binary.h  dt_int.c  dt_int.h  dt_jpeg.c  dt_jpeg.h  dt_numstr.c  dt_numstr.h  dt_oc.c  dt_oc.h  dt_password.c  dt_password.h  dt_text.c  dt_text.h  (+81 more)
src/.deps/: COPYING.Po  browse-dnd.Po  browse-export.Po  configfile.Po  debug.Po  dt_binary.Po  dt_cert.Po  dt_clist.Po  dt_crl.Po  dt_date.Po  dt_entry.Po  dt_generic_binary.Po  dt_int.Po  dt_jpeg.Po  dt_numstr.Po  dt_oc.Po  dt_password.Po  dt_text.Po  dt_time.Po  dtutil.Po  encode.Po  errorchain.Po  filter.Po  formfill.Po  gq-browser-model.Po  gq-browser-node-dn.Po  gq-browser-node-reference.Po  gq-browser-node-server.Po  gq-browser-node.Po  gq-hash-gnutls.Po  gq-hash-openssl.Po  gq-hash.Po  gq-keyring.Po  gq-server-list.Po  gq-server.Po  gq-tab-browse.Po  gq-tab-schema.Po  gq-tab-search.Po  gq-tab.Po  gq-tree-widget.Po  (+18 more)
test/: Makefile  Makefile.am  Makefile.in
